Update API URL in index.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,7 +22,7 @@ th{position:sticky;top:0;background:#020617}
 </div>
 <div id="out" class="card">Ready</div>
 <script>
-const API = "REPLACE_WITH_RENDER_API_URL";
+const API = "https://nse-stock-screener.onrender.com";
 function table(data){
  let h="<table><tr><th>Stock</th><th>RSI</th><th>ADX</th><th>MACD</th><th>Vol</th><th>Avg</th><th>BB</th><th>Trend</th></tr>";
  data.forEach(r=>{
