--- a/frontend/index.html
+++ b/frontend/index.html
@@ -75,7 +75,7 @@ th{
 <div id="output">Ready</div>
 
 <script>
-const API = "https://nse-stock-screener-api.onrender.com"; // KEEP YOUR URL
+const API = "https://nse-stock-screener.onrender.com"; // KEEP YOUR URL
 
 const output = document.getElementById("output");
 
