Update API endpoint in index.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -75,7 +75,7 @@ th{
 <div id="output">Ready</div>
 
 <script>
-const API = "https://nse-stock-screener-api.onrender.com";
+const API = "https://nse-stock-screener.onrender.com";
 const output = document.getElementById("output");
 
 document.getElementById("cachedBtn").onclick = loadCached;
